[package]
name = "hackrf-hal"
version = "0.1.0"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/sharebrained/rust-hackrf-hal"
description = "Hardware abstraction layer for HackRF"
keywords = ["hackrf", "sdr", "hal"]
authors = [
	"Jared Boone <jared@sharebrained.com>",
]

[dependencies]
lpc43xx = { git = "https://github.com/jboone/rust-lpc43xx.git"}
